--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -1,25 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
-    <shortcut
-        android:enabled="true"
-        android:shortcutId="record_expense_voice"
-        android:shortcutLongLabel="@string/assistant_shortcut_long"
-        android:shortcutShortLabel="@string/assistant_shortcut_short">
+
+    <capability android:name="actions.intent.CREATE_NOTE">
         <intent
             android:action="android.intent.action.VIEW"
-            android:targetClass="com.sgagestudio.dicho.MainActivity"
-            android:targetPackage="com.sgagestudio.dicho" />
+            android:targetPackage="com.sgagestudio.dicho"
+            android:targetClass="com.sgagestudio.dicho.MainActivity">
+            <data android:scheme="dicho" android:host="voice_input" />
+            <parameter
+                android:name="note.text"
+                android:key="text_body" />
+        </intent>
+    </capability>
 
-        <capability android:name="actions.intent.CREATE_MONEY_TRANSFER">
-            <intent
-                android:action="android.intent.action.VIEW"
-                android:targetClass="com.sgagestudio.dicho.MainActivity"
-                android:targetPackage="com.sgagestudio.dicho">
-                <data android:scheme="dicho" android:host="record" />
-                <parameter
-                    android:name="moneyTransfer.note"
-                    android:key="rawText" />
-            </intent>
-        </capability>
+    <capability android:name="actions.intent.OPEN_APP_FEATURE">
+        <intent
+            android:action="android.intent.action.VIEW"
+            android:targetPackage="com.sgagestudio.dicho"
+            android:targetClass="com.sgagestudio.dicho.MainActivity">
+            <data android:scheme="dicho" android:host="voice_input" />
+            <parameter
+                android:name="feature"
+                android:key="text_body" />
+        </intent>
+    </capability>
+
+    <shortcut
+        android:shortcutId="record_expense_quick"
+        android:enabled="true"
+        android:icon="@drawable/ic_mic"
+        android:shortcutShortLabel="@string/assistant_shortcut_short"
+        android:shortcutLongLabel="@string/assistant_shortcut_long">
+        <intent
+            android:action="android.intent.action.VIEW"
+            android:targetPackage="com.sgagestudio.dicho"
+            android:targetClass="com.sgagestudio.dicho.MainActivity">
+            <data android:scheme="dicho" android:host="open_mic" />
+        </intent>
     </shortcut>
+
 </shortcuts>
